; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/liquidio/base/extr_lio_mem_ops.c_lio_pci_fastwrite.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/liquidio/base/extr_lio_mem_ops.c_lio_pci_fastwrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.octeon_device = type { i32 }

@MEMOPS_IDX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.octeon_device*, i32, i32*, i32)* @lio_pci_fastwrite to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lio_pci_fastwrite(%struct.octeon_device* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.octeon_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.octeon_device* %0, %struct.octeon_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  br label %9

9:                                                ; preds = %19, %4
  %10 = load i32, i32* %8, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %9
  %13 = load i32, i32* %6, align 4
  %14 = sext i32 %13 to i64
  %15 = and i64 %14, 7
  %16 = icmp ne i64 %15, 0
  br label %17

17:                                               ; preds = %12, %9
  %18 = phi i1 [ false, %9 ], [ %16, %12 ]
  br i1 %18, label %19, label %29

19:                                               ; preds = %17
  %20 = load %struct.octeon_device*, %struct.octeon_device** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %6, align 4
  %23 = load i32*, i32** %7, align 8
  %24 = getelementptr inbounds i32, i32* %23, i32 1
  store i32* %24, i32** %7, align 8
  %25 = load i32, i32* %23, align 4
  %26 = call i32 @lio_write_bar1_mem8(%struct.octeon_device* %20, i32 %21, i32 %25)
  %27 = load i32, i32* %8, align 4
  %28 = add nsw i32 %27, -1
  store i32 %28, i32* %8, align 4
  br label %9

29:                                               ; preds = %17
  %30 = load %struct.octeon_device*, %struct.octeon_device** %5, align 8
  %31 = load i32, i32* @MEMOPS_IDX, align 4
  %32 = call i32 @lio_toggle_bar1_swapmode(%struct.octeon_device* %30, i32 %31)
  br label %33

33:                                               ; preds = %36, %29
  %34 = load i32, i32* %8, align 4
  %35 = icmp sge i32 %34, 8
  br i1 %35, label %36, label %48

36:                                               ; preds = %33
  %37 = load %struct.octeon_device*, %struct.octeon_device** %5, align 8
  %38 = load i32, i32* %6, align 4
  %39 = load i32*, i32** %7, align 8
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @lio_write_bar1_mem64(%struct.octeon_device* %37, i32 %38, i32 %40)
  %42 = load i32, i32* %6, align 4
  %43 = add nsw i32 %42, 8
  store i32 %43, i32* %6, align 4
  %44 = load i32*, i32** %7, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 8
  store i32* %45, i32** %7, align 8
  %46 = load i32, i32* %8, align 4
  %47 = sub nsw i32 %46, 8
  store i32 %47, i32* %8, align 4
  br label %33

48:                                               ; preds = %33
  %49 = load %struct.octeon_device*, %struct.octeon_device** %5, align 8
  %50 = load i32, i32* @MEMOPS_IDX, align 4
  %51 = call i32 @lio_toggle_bar1_swapmode(%struct.octeon_device* %49, i32 %50)
  br label %52

52:                                               ; preds = %56, %48
  %53 = load i32, i32* %8, align 4
  %54 = add nsw i32 %53, -1
  store i32 %54, i32* %8, align 4
  %55 = icmp ne i32 %53, 0
  br i1 %55, label %56, label %64

56:                                               ; preds = %52
  %57 = load %struct.octeon_device*, %struct.octeon_device** %5, align 8
  %58 = load i32, i32* %6, align 4
  %59 = add nsw i32 %58, 1
  store i32 %59, i32* %6, align 4
  %60 = load i32*, i32** %7, align 8
  %61 = getelementptr inbounds i32, i32* %60, i32 1
  store i32* %61, i32** %7, align 8
  %62 = load i32, i32* %60, align 4
  %63 = call i32 @lio_write_bar1_mem8(%struct.octeon_device* %57, i32 %58, i32 %62)
  br label %52

64:                                               ; preds = %52
  ret void
}

declare dso_local i32 @lio_write_bar1_mem8(%struct.octeon_device*, i32, i32) #1

declare dso_local i32 @lio_toggle_bar1_swapmode(%struct.octeon_device*, i32) #1

declare dso_local i32 @lio_write_bar1_mem64(%struct.octeon_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
